--- a/style/custom.css
+++ b/style/custom.css
@@ -1742,6 +1742,7 @@ table td[class*=col-], table th[class*=col-] {
 }
 
 @media (max-width: 767px) {
+
     .table-responsive {
         width: 100%;
         margin-bottom: 16.5px;
@@ -2702,6 +2703,14 @@ a.badge:focus, a.badge:hover {
 @media (max-width: 767px) {
     .hidden-xs {
         display: none !important
+    }
+    .home-2 .home-info {
+        padding: 50px 20px !important;
+    }
+    .page-element-sheets #scene,
+    .page-menu #scene,
+    .page-contact #scene {
+       display: none;
     }
 }
 
