--- a/style/custom.css
+++ b/style/custom.css
@@ -26100,6 +26100,12 @@ div.postbox div.inside {
     padding: 30px;
 }
 
+
+.post-text p img {
+    margin: 0 auto !important;
+    display: block;
+}
+
 .modal-custom.open {
     visibility: visible;
     opacity: 1;
